force-app/main/default/objects/Role_Change_Request__c/Role_Change_Request__c.object-meta.xml
<CustomObject>
    <description>Submit requests to update a user&#39;s role</description>
    <label>Role Change Request</label>
    <nameField>
        <displayFormat>RCR-{0000}</displayFormat>
        <label>Role Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>