force-app/main/default/objects/Role_Change_Request__c/fields/Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_Role__c</fullName>
    <description>The current role for the selected user</description>
    <formula>User__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The current role for the selected user</inlineHelpText>
    <label>Current Role</label>
    <type>Text</type>
</CustomField>