force-app/main/default/objects/Role_Change_Request__c/fields/New_Role__c.field-meta.xml
<CustomField>
    <fullName>New_Role__c</fullName>
    <description>Select the role that this user should be updated to</description>
    <inlineHelpText>Select the role that this user should be updated to</inlineHelpText>
    <label>New Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00E3k000001roeX</fullName>
                <label>CEO</label>
            </value>
            <value>
                <fullName>00E3k000001roeo</fullName>
                <label>COO</label>
            </value>
            <value>
                <fullName>00E3k000001NKua</fullName>
                <label>Jedi Master</label>
            </value>
            <value>
                <fullName>00E3k000001NKuf</fullName>
                <label>Jedi Knight</label>
            </value>
            <value>
                <fullName>00E3k000001NKuk</fullName>
                <label>Padawan</label>
            </value>
            <value>
                <fullName>00E3k000001NKup</fullName>
                <label>Youngling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>