force-app/main/default/objects/Role_Change_Request__c/fields/New_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Role_Name__c</fullName>
    <description>Used to capture the name only of the new role, vs. the record ID</description>
    <inlineHelpText>Used to capture the name only of the new role, vs. the record ID</inlineHelpText>
    <label>New Role Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Role__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Jedi Master</fullName>
            </value>
            <value>
                <fullName>Jedi Knight</fullName>
            </value>
            <value>
                <fullName>Padawan</fullName>
            </value>
            <value>
                <fullName>Youngling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>