force-app/main/default/objects/Role_Change_Request__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user for whom you are submitting the role change request</description>
    <inlineHelpText>The user for whom you are submitting the role change request</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Role_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>